--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "target": "ESNext",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   },
   "include": ["./src/**/*.ts"],
   "exclude": ["./node_modules", "**/*.test.ts"]
