add type info about `/password-strength`'s `response.body`
+ README cleanup

--- a/.github/workflows/main-workflow.yaml
+++ b/.github/workflows/main-workflow.yaml
@@ -34,6 +34,9 @@ jobs:
       - name: install dependencies
         run: npm ci
 
+      - name: check formatting
+        run: npm run format:check
+
       - name: run tests
         run: npm test
 
